fix: cambios dashboard
